k8s/dev/ingress.yaml
# ingress.yaml for dev
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-dev
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dev.domaine.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-dev-svc
                port:
                  number: 80
